--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "author": "Héctor Ochoa <hector.ochoa.dev@gmail.com>",
   "description": "Hygen template grammar for tree-sitter",
+  "main": "bindings/node",
   "types": "bindings/node",
   "packageManager": "pnpm@9.6.0",
   "files": [
