chore: add language configuration to `package.json`
as described in
https://tree-sitter.github.io/tree-sitter/syntax-highlighting#overview

also needed to use `tree-sitter highlight` command

--- a/package.json
+++ b/package.json
@@ -60,7 +60,11 @@
   "tree-sitter": [
     {
       "scope": "source.hygen_template",
-      "injection-regex": "^hygen_template$"
+      "file-types": [
+        "hygen"
+      ],
+      "injection-regex": "^hygen_template$",
+      "highlights": "queries/highlights.scm"
     }
   ],
   "wireit": {
