--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,5 @@ jobs:
       - name: Run tests
         uses: tree-sitter/parser-test-action@v2
         with:
+          test-parser-cmd: tree-sitter generate && tree-sitter test
           test-rust: ${{runner.os == 'Linux'}}
