ci(ci): run `tree-sitter` test with `pnpm`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,5 @@ jobs:
       - name: Run tests
         uses: tree-sitter/parser-test-action@v2
         with:
+          test-parser-cmd: pnpm tree-sitter test
           test-rust: ${{runner.os == 'Linux'}}
