--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,14 +32,13 @@ jobs:
     if: github.repository == 'Hdoc1509/tree-sitter-hygen-template'
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
+          cache: npm
 
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm run test:all
+      - run: npm ci
+      - run: npm run test:all
 
       - run: scripts/prepare-to-publish.sh
         shell: bash
