--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
           cache: npm
 
       - run: npm ci
-      - run: npm run test:all
+      - run: npx tree-sitter test
 
       - run: scripts/prepare-to-publish.sh
         shell: bash
