chore: add custom changelog generator

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.27.8",
+    "@changesets/types": "6.0.0",
     "prebuildify": "6.0.1",
     "prettier": "3.3.3",
     "tree-sitter": "0.21.1",
