chore: split release script
resulting scripts:
- release.sh -> to use after stable version (v1.0.0) has been released
- release-unstable.sh -> until stable version has been released

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gen": "wireit",
     "hl": "tree-sitter highlight",
     "install": "tree-sitter generate && node-gyp-build",
-    "parser:release": "bash ./scripts/release.sh",
+    "parser:release": "bash ./scripts/release-unstable.sh",
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
     "test": "node --test bindings/node/*_test.js",
