--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "tree-sitter-hygen-template",
   "version": "0.0.0",
+  "description": "Hygen Template grammar for tree-sitter",
+  "repository": "github:Hdoc1509/tree-sitter-hygen-template",
   "license": "MIT",
-  "author": "Héctor Ochoa <hector.ochoa.dev@gmail.com>",
-  "description": "Hygen template grammar for tree-sitter",
+  "author": {
+    "name": "Héctor Ochoa",
+    "email": "hector.ochoa.dev@gmail.com"
+  },
   "main": "bindings/node",
   "types": "bindings/node",
+  "keywords": [
+    "incremental",
+    "parsing",
+    "tree-sitter",
+    "hygen-template",
+    "hygen",
+    "template"
+  ],
   "files": [
     "grammar.js",
     "binding.gyp",
@@ -15,6 +27,28 @@
     "src/**",
     "*.wasm"
   ],
+  "dependencies": {
+    "node-addon-api": "8.0.0",
+    "node-gyp-build": "4.8.1",
+    "tree-sitter-embedded-template": "0.23.0"
+  },
+  "devDependencies": {
+    "@changesets/cli": "2.27.8",
+    "@changesets/types": "6.0.0",
+    "prebuildify": "6.0.1",
+    "prettier": "3.3.3",
+    "tree-sitter": "0.21.1",
+    "tree-sitter-cli": "0.23.0",
+    "wireit": "0.14.9"
+  },
+  "peerDependencies": {
+    "tree-sitter": "0.21.1"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
+    }
+  },
   "scripts": {
     "dev": "npm run _test:watchable --watch",
     "dev:one": "npm run _test:watchable --watch -- --filter",
@@ -28,36 +62,6 @@
     "test:all": "tree-sitter generate && tree-sitter test",
     "test:one": "tree-sitter generate && tree-sitter test --filter",
     "_test:watchable": "wireit"
-  },
-  "repository": "github:Hdoc1509/tree-sitter-hygen-template",
-  "keywords": [
-    "hygen",
-    "hygen-template",
-    "template",
-    "tree-sitter",
-    "parser"
-  ],
-  "dependencies": {
-    "node-addon-api": "8.0.0",
-    "node-gyp-build": "4.8.1",
-    "tree-sitter-embedded-template": "0.23.0"
-  },
-  "peerDependencies": {
-    "tree-sitter": "0.21.1"
-  },
-  "peerDependenciesMeta": {
-    "tree_sitter": {
-      "optional": true
-    }
-  },
-  "devDependencies": {
-    "@changesets/cli": "2.27.8",
-    "@changesets/types": "6.0.0",
-    "prebuildify": "6.0.1",
-    "prettier": "3.3.3",
-    "tree-sitter": "0.21.1",
-    "tree-sitter-cli": "0.23.0",
-    "wireit": "0.14.9"
   },
   "tree-sitter": [
     {
