--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tree-sitter-hygen-template"
-description = "HygenTemplate grammar for tree-sitter"
+description = "Hygen Template grammar for tree-sitter"
 version = "0.0.1"
-keywords = ["incremental", "parsing", "tree-sitter", "hygen-template"]
+keywords = ["incremental", "parsing", "tree-sitter", "hygen-template", "hygen", "template"]
 classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
@@ -14,6 +14,7 @@ classifiers = [
   "Topic :: Text Processing :: Linguistic",
   "Typing :: Typed"
 ]
+authors= [{ name = "Héctor Ochoa", email = "hector.ochoa.dev@gmail.com" }]
 requires-python = ">=3.9"
 license.text = "MIT"
 readme = "README.md"
