--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,16 @@ jobs:
   crates:
     if: github.repository == 'Hdoc1509/tree-sitter-hygen-template'
     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
+    with:
+      generate: true
     secrets:
       CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
 
   pypi:
     if: github.repository == 'Hdoc1509/tree-sitter-hygen-template'
     uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
+    with:
+      generate: true
     secrets:
       PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
 
@@ -40,8 +44,7 @@ jobs:
       - run: npm ci
       - run: npx tree-sitter test
 
-      - run: scripts/prepare-to-publish.sh
-        shell: bash
+      - run: ./scripts/prepare-to-publish.sh
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
