ci(publish): add missing permissions to deploy with gh-pages
https://github.com/peaceiris/actions-gh-pages?tab=readme-ov-file#%EF%B8%8F-first-deployment-with-github_token

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,8 @@ jobs:
   gh-pages:
     runs-on: ubuntu-22.04
     if: github.repository == 'Hdoc1509/tree-sitter-hygen-template'
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
