refactor: bring back generated parser files
these files are needed to publish to crates.io and pypy.org because of
dependency on `embedded-template`, allowing to skip regenerating step of
respective workflows from tree-sitter/workflows (which causes publish
failures)

- updated `install` script in package.json
- updated ci and publish workflow

future of these files will depend on the following issues:
https://github.com/tree-sitter/tree-sitter/issues/730#issuecomment-736018228
https://github.com/tree-sitter/tree-sitter/issues/930

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "dev:one": "npm run _test:watchable --watch -- --include",
     "gen": "wireit",
     "hl": "tree-sitter highlight",
-    "install": "tree-sitter generate && node-gyp-build",
+    "install": "node-gyp-build",
     "parser:release": "bash ./scripts/release-unstable.sh",
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
