--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,19 +36,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
-      # needed because of parser dependencies
-      - name: Install dependencies
-        run: npm ci
-
+      - name: Set up tree-sitter
+        uses: tree-sitter/setup-action/cli@v1
       - name: Run tests
         uses: tree-sitter/parser-test-action@v2
         with:
-          test-parser-cmd: npx tree-sitter test
           test-rust: ${{runner.os == 'Linux'}}
