chore: update keywords
there is a limit of 5 keywords per crate

use the same keywords for all package files

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "incremental",
     "parsing",
     "tree-sitter",
-    "hygen-template",
-    "hygen",
-    "template"
+    "hygen-template"
   ],
   "files": [
     "grammar.js",
