--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.2.1"
 authors = ["Héctor Ochoa <hector.ochoa.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-keywords = ["incremental", "parsing", "tree-sitter", "hygen-template", "hygen", "template"]
+keywords = ["incremental", "parsing", "tree-sitter", "hygen-template"]
 categories = ["parsing", "text-editors"]
 repository = "https://github.com/Hdoc1509/tree-sitter-hygen-template"
 edition = "2021"
