--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "tree-sitter-hygen-template"
 description = "Hygen Template grammar for tree-sitter"
-version = "0.2.1"
-keywords = ["incremental", "parsing", "tree-sitter", "hygen-template", "hygen", "template"]
+version = "0.2.2"
+keywords = ["incremental", "parsing", "tree-sitter", "hygen-template"]
 classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
