--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-sitter-hygen-template",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Hygen Template grammar for tree-sitter",
   "repository": "github:Hdoc1509/tree-sitter-hygen-template",
   "license": "MIT",
@@ -14,9 +14,7 @@
     "incremental",
     "parsing",
     "tree-sitter",
-    "hygen-template",
-    "hygen",
-    "template"
+    "hygen-template"
   ],
   "files": [
     "grammar.js",
