feat(changeset): add `repo` option to custom changelog generator

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.3/schema.json",
-  "changelog": "./with-links-changelog.cjs",
+  "changelog": [
+    "./with-links-changelog.cjs",
+    { "repo": "Hdoc1509/tree-sitter-hygen-template" }
+  ],
   "commit": false,
   "fixed": [],
   "linked": [],
