refactor(changesets): add custom generator
until @svitejs/changesets-changelog-github-compact decides to update its
dependencies

https://github.com/svitejs/changesets-changelog-github-compact/issues/55#issuecomment-2407851778

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.3/schema.json",
   "changelog": [
-    "@svitejs/changesets-changelog-github-compact",
+    "./with-updated-github-info.cjs",
     { "repo": "Hdoc1509/tree-sitter-hygen-template" }
   ],
   "commit": false,
