--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.27.9",
+    "@changesets/get-github-info": "0.6.0",
     "@changesets/types": "6.0.0",
     "@svitejs/changesets-changelog-github-compact": "1.1.0",
+    "dotenv": "16.4.5",
     "prebuildify": "6.0.1",
     "prettier": "3.3.3",
     "tree-sitter": "0.21.1",
