--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "tree-sitter": "0.21.1"
   },
   "peerDependenciesMeta": {
-    "tree_sitter": {
+    "tree-sitter": {
       "optional": true
     }
   },
