feat: update .editorconfig
based on:
https://github.com/tree-sitter/tree-sitter/commit/8681960fbcb220579cd0d3fea22899741d2cbec2

--- a/.editorconfig
+++ b/.editorconfig
@@ -43,6 +43,9 @@ indent_size = 8
 [parser.c]
 indent_size = 2
 
+[{alloc,array,parser}.h]
+indent_size = 2
+
 [*.sh]
 indent_style = space
 indent_size = 2
