--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-sitter-hygen-template",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Hygen Template grammar for tree-sitter",
   "repository": "github:Hdoc1509/tree-sitter-hygen-template",
   "license": "MIT",
@@ -10,6 +10,7 @@
   },
   "main": "bindings/node",
   "types": "bindings/node",
+  "packageManager": "npm@10.9.0",
   "keywords": [
     "incremental",
     "parsing",
@@ -18,6 +19,7 @@
   ],
   "files": [
     "grammar.js",
+    "tree-sitter.json",
     "binding.gyp",
     "prebuilds/**",
     "bindings/node/*",
@@ -31,22 +33,20 @@
     "tree-sitter-embedded-template": "0.23.0"
   },
   "devDependencies": {
-    "@changesets/cli": "2.27.9",
-    "@changesets/get-github-info": "0.6.0",
+    "@changesets/cli": "2.27.10",
     "@changesets/types": "6.0.0",
-    "@svitejs/changesets-changelog-github-compact": "1.1.0",
-    "dotenv": "16.4.5",
+    "@svitejs/changesets-changelog-github-compact": "1.2.0",
     "prebuildify": "6.0.1",
     "prettier": "3.3.3",
     "tree-sitter": "0.21.1",
-    "tree-sitter-cli": "0.24.1",
+    "tree-sitter-cli": "0.24.4",
     "wireit": "0.14.9"
   },
   "peerDependencies": {
     "tree-sitter": "0.21.1"
   },
   "peerDependenciesMeta": {
-    "tree_sitter": {
+    "tree-sitter": {
       "optional": true
     }
   },
