--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tree-sitter-hygen-template"
 description = "Hygen Template grammar for tree-sitter"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Héctor Ochoa <hector.ochoa.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -12,7 +12,7 @@ edition = "2021"
 autoexamples = false
 
 build = "bindings/rust/build.rs"
-include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]
+include = ["bindings/rust/*", "./grammar.js", "queries/*", "src/*", "tree-sitter.json"]
 
 [lib]
 path = "bindings/rust/lib.rs"
