--- a/.editorconfig
+++ b/.editorconfig
@@ -53,3 +53,8 @@ indent_size = 2
 [*.test]
 indent_style = space
 indent_size = 2
+
+[*.md]
+indent_style = space
+indent_size = 2
+max_line_length = 80
